Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16637

ll_truncate_inode_pages_final() ASSERTION( nrpages == 0 ) failed: ... nrpages=1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      truncate_inode_pages() is required to be called under (and serialised by) inode lock, or else new page could be added in the inode's page tree even ll_truncate_inode_pages_final() leverages mapping->i_pages protection to prevent a page is still in the process of deletion (inside __delete_from_page_cache())

      649346.462967] LustreError: 482172:0:(llite_lib.c:2235:ll_truncate_inode_pages_final()) ASSERTION( nrpages == 0 ) failed: exa5: inode=[0x5c004247c:0x9b:0x0](000000000c1d2c09) nrpages=1, see https://jira.whamcloud.com/browse/LU-118
      [649346.483202] LustreError: 482172:0:(llite_lib.c:2235:ll_truncate_inode_pages_final()) LBUG
      [649346.491472] Pid: 482172, comm: nsmb6.09.23.mpi 4.18.0-348.12.2.el8_5.x86_64 #1 SMP Wed Jan 19 17:53:40 UTC 2022
      [649346.501648] Call Trace TBD:
      [649346.504644] [<0>] libcfs_call_trace+0x6f/0x90 [libcfs]
      [649346.509880] [<0>] lbug_with_loc+0x43/0x80 [libcfs]
      [649346.514891] [<0>] ll_truncate_inode_pages_final+0xa7/0xe0 [lustre]
      [649346.521185] [<0>] vvp_prune+0x178/0x1d0 [lustre]
      [649346.525932] [<0>] cl_object_prune+0x51/0x110 [obdclass]
      [649346.531263] [<0>] lov_conf_set+0x5ad/0xa90 [lov]
      [649346.536007] [<0>] cl_conf_set+0x59/0x110 [obdclass]
      [649346.540995] [<0>] ll_layout_conf+0x13e/0x3d0 [lustre]
      [649346.546160] [<0>] ll_layout_refresh+0x581/0x980 [lustre]
      [649346.551588] [<0>] vvp_io_init+0x225/0x370 [lustre]
      [649346.556502] [<0>] cl_io_init0.isra.15+0x84/0x130 [obdclass]
      [649346.562186] [<0>] ll_fault_io_init+0x1cf/0x430 [lustre]
      [649346.567527] [<0>] ll_fault+0x222/0x900 [lustre]
      [649346.572158] [<0>] __do_fault+0x38/0xb0
      [649346.576000] [<0>] do_fault+0x1a0/0x3c0
      [649346.579851] [<0>] __handle_mm_fault+0x4d5/0x820
      [649346.584473] [<0>] handle_mm_fault+0xbe/0x1e0
      [649346.588836] [<0>] __do_page_fault+0x1ed/0x4c0
      [649346.593289] [<0>] do_page_fault+0x37/0x130
      [649346.597478] [<0>] page_fault+0x1e/0x30
      [649346.601326] Kernel panic - not syncing: LBUG
      

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: